2009-02-24  Beth Dakin  <bdakin@apple.com>

        Reviewed by Sam Weinig.

        Test for https://bugs.webkit.org/show_bug.cgi?id=24004 REGRESSION: 
        Ordered list item marker misaligned when line height is not 1.2 
        -and corresponding <rdar://problem/6602506>

        * fast/lists/list-marker-with-line-height.html: Added.
        * platform/mac/fast/lists/list-marker-with-line-height-expected.checksum: Added.
        * platform/mac/fast/lists/list-marker-with-line-height-expected.png: Added.
        * platform/mac/fast/lists/list-marker-with-line-height-expected.txt: Added.

2009-02-24  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Simon Fraser.

        Adding these tests back in and removing from the Skipped list as
        these tests are all now passing on my machine as of latest revision.

        * platform/qt/Skipped:

2009-02-24  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by Cameron Zwarich.

        Remove tests from the Qt Skipped list that no longer even exist.

        * platform/qt/Skipped:

2009-02-24  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=24091
        <rdar://problem/6468660> Start of redirect chain ends up as master entry in Application Cache

        * http/tests/appcache/access-via-redirect-expected.txt: Added.
        * http/tests/appcache/access-via-redirect.php: Added.
        * http/tests/appcache/resources/access-via-redirect.html: Added.
        * http/tests/appcache/resources/access-via-redirect.manifest: Added.

2009-02-24  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Mark Rowe ("awesome!").

        Make test for <https://bugs.webkit.org/show_bug.cgi?id=15707> more reliable.

        * fast/dom/onload-open.html: Added waitUntilDone().

2009-02-24  David Levin  <levin@chromium.org>

        Reviewed by Dave Hyatt.

        Update expected results due to better results introduced by r41090.
