@@ -39,7 +39,7 @@
       dispatchEvent(36, 272, 'with-bordertopextra', 4, 4);
       // dispatchEvent(639, 316, 'in-columns', 173, -172);  // This is buggy. See https://bugs.webkit.org/show_bug.cgi?id=21993
       dispatchEvent(563, 410, 'inside-overflow', 7, 6);
-      dispatchEvent(112, 369, 'transformed', 11, 15);
+      dispatchEvent(112, 369, 'transformed', 11, 16);
             
       if (window.layoutTestController)
         layoutTestController.notifyDone();
