@@ -1,3 +1,15 @@
+2009-02-24  Simon Fraser  <simon.fraser@apple.com>
+
+        Reviewed by Darin Adler
+        
+        https://bugs.webkit.org/show_bug.cgi?id=24135
+        
+        Round the FloatPoint returned by absoluteToLocal(), rather than
+        truncating it.
+
+        * dom/MouseRelatedEvent.cpp:
+        (WebCore::MouseRelatedEvent::receivedTarget):
+
 2009-02-24  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Sam Weinig.
