@@ -1,3 +1,13 @@
+2009-02-24  Simon Fraser  <simon.fraser@apple.com>
+
+        Reviewed by Darin Adler
+
+        https://bugs.webkit.org/show_bug.cgi?id=24135
+        
+        Fix test now that offsetX/offsetY get rounded, rather than truncated.
+
+        * fast/events/offsetX-offsetY.html:
+
 2009-02-24  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Sam Weinig.
